test/nexj/invalidbase/messages/CSV_Invalid_SameOrdinals.message
<Message format="CSV">
   <CSVMapping header="true"/>
   <Parts>
      <Message maxCount="0" name="Row">
         <Parts>
            <Value description="First Column" name="firstName" type="string"/>
            <Value description="Second Column" name="lastName" type="string">
               <CSVMapping ordinal="5"/>
            </Value>
            <Value name="age" type="integer">
               <CSVMapping ordinal="10"/>
            </Value>
            <Message name="Phone1">
               <Parts>
                  <Value name="location" type="string">
                     <CSVMapping ordinal="4"/>
                  </Value>
                  <Value name="number" type="string">  <!-- Conflicts with lastName above -->
                  </Value>
               </Parts>
            </Message>
         </Parts>
      </Message>
   </Parts>
</Message>